pulled data from input

--- a/js/ng-views/index.html
+++ b/js/ng-views/index.html
@@ -1,31 +1,17 @@
-<div class="">
-  <h2>Enter your location below</h2>
+<div id="intro">
+ <h2>Enter your location below</h2>
+ <form id = "zipcodeform">
 
-  <label ng-repeat="category in categories">
-    <input type="checkbox" checklist-model="user.categories" checklist-value="category"> {{category}}
-  </label>
-  <div>
-    {{ user.categories}}
-  </div>
-  <!-- <form data-ng-submit="vm.create()">
-    <input type="text" data-ng-model="vm.newUserInput.postal_code" placeholder="Enter Zipcode">
-
-    <br><br>
-
-    <input type="checkbox" data-ng-model="vm.newUserInput.music" value="Music"> Music Icon
-
-    <input type="checkbox" data-ng-model="vm.newUserInput.comedy" value="Comedy"> Comedy Icon
-
-    <input type="checkbox" data-ng-model="vm.newUserInput.sports" value="Sports">Sports Icon
-    <br>
-    <input type="checkbox" data-ng-model="vm.newUserInput.arts" value="Performing Arts"> Arts Icon
-
-    <input type="checkbox" data-ng-model="vm.newUserInput.food" value="Food"> Food Icon
-
-    <input type="checkbox" data-ng-model="vm.newUserInput.family" value="Family"> Family Icon
-
-    <br><br>
-
-    <button type="sumbit">Let's be not bored</button>
-  </form> -->
-</div>
+ <input type="text" ng-model="user.postal_code" name="postal_code" placeholder="ZIPCODE"><br/>
+<section>
+ <div class="icons">
+   <label ng-repeat="category in categories">
+     <div class="circle">
+       <input type="checkbox" checklist-model="user.categories" checklist-value="category"> {{category}}
+     </div>
+   </label>
+ </div>
+</section>
+ <button type="button" data-ng-click="vm.create(user) ">Let's Go!</button>
+ </form>
+ <pre> user = {{user | json}}</pre>
