--- a/index.html
+++ b/index.html
@@ -1,30 +1,20 @@
 <!DOCTYPE html>
 <html lang="en" data-ng-app="heyimbored">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Hey I'm Bored</title>
-  <script src="https://www.gstatic.com/firebasejs/3.6.2/firebase.js"></script>
-  <script>
-    // Initialize Firebase
-    var config = {
-      apiKey: "AIzaSyAVcTZ30FumDp2LyrEj9NV0aNbHjxnJd3Q",
-      authDomain: "bored-test-6c9ba.firebaseapp.com",
-      databaseURL: "https://bored-test-6c9ba.firebaseio.com",
-      storageBucket: "",
-      messagingSenderId: "835177755343"
-    };
-    firebase.initializeApp(config);
-  </script>
-    <link rel="stylesheet" type="text/css" href="style.css">
-  <link href="https://fonts.googleapis.com/css?family=Fredoka+One" rel="stylesheet">
+ <meta charset="UTF-8">
+ <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <meta http-equiv="X-UA-Compatible" content="ie=edge">
+ <title>Hey I'm Bored</title>
 
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0-beta.2/angular-resource.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/checklist-model/0.10.0/checklist-model.js"></script>
-    <script type="text/javascript" src="js/app.js"></script>
+ <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.min.js"></script>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0-beta.2/angular-resource.min.js"></script>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/checklist-model/0.10.0/checklist-model.js">
+   </script>
+   <script type="text/javascript" src="js/app.js"></script>
+   <link href="https://fonts.googleapis.com/css?family=Fredoka+One" rel="stylesheet">
+   <link rel="stylesheet" href="/css/style.css">
+
 </head>
 
 <body>
