--- a/index.html
+++ b/index.html
@@ -15,6 +15,21 @@
     <link href="https://fonts.googleapis.com/css?family=Fredoka+One|Open+Sans" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css">
 
+ <meta charset="UTF-8">
+ <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <meta http-equiv="X-UA-Compatible" content="ie=edge">
+ <title>Hey I'm Bored</title>
+
+ <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.min.js"></script>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0-beta.2/angular-resource.min.js"></script>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/checklist-model/0.10.0/checklist-model.js">
+   </script>
+   <script type="text/javascript" src="js/app.js"></script>
+   <link href="https://fonts.googleapis.com/css?family=Fredoka+One" rel="stylesheet">
+   <link rel="stylesheet" href="/css/style.css">
+
+
 </head>
 
 <body>
